chore: 兼容版本定义

--- a/gradle.properties
+++ b/gradle.properties
@@ -4,11 +4,11 @@ pluginGroup = com.github.yuyuanweb.mianshiyaplugin
 pluginName = mianshiya-plugin
 pluginRepositoryUrl = https://github.com/co-pine/mianshiya-plugin
 # SemVer format -> https://semver.org
-pluginVersion = 0.0.1
+pluginVersion = 0.0.5
 
 # Supported build number ranges and IntelliJ Platform versions -> https://plugins.jetbrains.com/docs/intellij/build-number-ranges.html
-pluginSinceBuild = 201
-pluginUntilBuild =
+pluginSinceBuild = 211
+#pluginUntilBuild = 242.*
 
 # IntelliJ Platform Properties -> https://plugins.jetbrains.com/docs/intellij/tools-gradle-intellij-plugin.html#configuration-intellij-extension
 platformType = IC
