--- a/gradle.properties
+++ b/gradle.properties
@@ -1,33 +1,12 @@
-# IntelliJ Platform Artifacts Repositories -> https://plugins.jetbrains.com/docs/intellij/intellij-artifacts.html
-
 pluginGroup = com.github.yuyuanweb.mianshiyaplugin
-pluginName = mianshiya-plugin
-pluginRepositoryUrl = https://github.com/co-pine/mianshiya-plugin
-# SemVer format -> https://semver.org
-pluginVersion = 0.0.8
+pluginName = Mianshiya
+pluginVersion = 0.0.9
 
-# Supported build number ranges and IntelliJ Platform versions -> https://plugins.jetbrains.com/docs/intellij/build-number-ranges.html
 pluginSinceBuild = 211
-#pluginUntilBuild = 242.*
+pluginUntilBuild =
 
-# IntelliJ Platform Properties -> https://plugins.jetbrains.com/docs/intellij/tools-gradle-intellij-plugin.html#configuration-intellij-extension
 platformType = IC
-platformVersion = 2023.2.7
+platformVersion = 2021.1.1
 
-# Plugin Dependencies -> https://plugins.jetbrains.com/docs/intellij/plugin-dependencies.html
-# Example: platformPlugins = com.jetbrains.php:203.4449.22, org.intellij.scala:2023.3.27@EAP
-platformPlugins =
-# Example: platformBundledPlugins = com.intellij.java
-platformBundledPlugins = com.intellij.java
-
-# Gradle Releases -> https://github.com/gradle/gradle/releases
-gradleVersion = 8.9
-
-# Opt-out flag for bundling Kotlin standard library -> https://jb.gg/intellij-platform-kotlin-stdlib
-kotlin.stdlib.default.dependency = false
-
-# Enable Gradle Configuration Cache -> https://docs.gradle.org/current/userguide/configuration_cache.html
-org.gradle.configuration-cache = true
-
-# Enable Gradle Build Cache -> https://docs.gradle.org/current/userguide/build_cache.html
-org.gradle.caching = true
+# ,-Dide.browser.jcef.log.level=verbose,-Duser.language=en-US
+runIdeJvmArgs = -Dfile.encoding=utf-8
