--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -23,6 +23,8 @@
         <fileEditorProvider implementation="com.github.yuyuanweb.mianshiyaplugin.view.filetab.EditorProvider"/>
         <fileType name="msyQUESTION" extensions="msy;" fileNames=".msy" language="msyQUESTION"
                   implementationClass="com.github.yuyuanweb.mianshiyaplugin.view.filetab.CommonFileType" fieldName="INSTANCE"/>
+        <!--<fileType name="msycQUESTION" extensions="msyc;" fileNames=".msyc" language="msycQUESTION"-->
+        <!--          implementationClass="com.github.yuyuanweb.mianshiyaplugin.view.filetab.MsycFileType" fieldName="INSTANCE_C"/>-->
         <fileEditorProvider implementation="com.github.yuyuanweb.mianshiyaplugin.view.filetab.CommonProvider"/>
     </extensions>
 
