chore: 优化包大小

--- a/build.gradle
+++ b/build.gradle
@@ -28,7 +28,7 @@ dependencies {
     implementation(libs.hutool)
     implementation(libs.retrofit2)
     implementation(libs.converter.gson)
-    implementation(libs.flexmark)
+//    implementation(libs.flexmark)
 
 }
 
