chore: 在 description 中加入中文描述

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -11,6 +11,44 @@
     <description><![CDATA[
         <h2>Plugin Introduction</h2>
         <p>This is a plug-in version of <a href="https://www.mianshiya.com">mianshiya</a> system, which provides a more convenient and flexible way to practice questions.</p>
+        <p><strong>面试鸭</strong> 是一个帮助程序员在 JetBrains 系列产品中刷面试题的插件。插件题目全面、题解优质、支持多种筛选条件，是一款摸鱼刷题必备神器。</p>
+
+        <h3>特性</h3>
+
+        <ul>
+          <li><strong>题目丰富</strong>：拥有 20+ 题库分类，近 200 题库，6000+ 题目，涵盖了几乎所有主流编程方向的面试题。</li>
+          <li><strong>高质量题解</strong>：许多题解来自大厂面试官原创，抓住核心要点，通俗易懂，配有图片辅助理解。</li>
+          <li><strong>快捷键支持</strong>：支持自定义快捷键，轻松一键打开或收起插件。</li>
+          <li><strong>多条件筛选</strong>：可通过题库、标签、难度等条件筛选，快速找到自己想要的题目。</li>
+          <li><strong>讨论互动</strong>：题目详情页面分为题目、推荐答案、讨论区三个子 tab，方便交流讨论。</li>
+          <li><strong>多端同步</strong>：支持 IDEA 及 JetBrains 系列其他产品，如 WebStorm、PyCharm 等。同时支持小程序和 Web 端，数据三端同步。</li>
+          <li><strong>开源</strong>：插件完全开源，代码托管在 GitHub，欢迎贡献和 Star 支持。</li>
+        </ul>
+
+        <h3>安装与使用</h3>
+
+        <ol>
+          <li>打开 IntelliJ IDEA，进入 <code>Settings</code> &gt; <code>Plugins</code>。</li>
+          <li>搜索 <code>mianshiya</code>，点击安装。</li>
+        </ol>
+
+        <h3>三端兼容</h3>
+
+        <ul>
+          <li><strong>JetBrains 系列产品</strong>：支持 IDEA、WebStorm、PyCharm 等 2021.3 及以上版本。</li>
+          <li><strong>小程序端</strong>：随时随地刷题。</li>
+          <li><strong>Web 端</strong>：<a href="https://mianshiya.com">面试鸭 Web 端</a></li>
+        </ul>
+
+        <h3>开源项目</h3>
+
+        <p>插件代码完全开源，欢迎大家 Star 和贡献代码！</p>
+
+        <p>GitHub 地址：<a href="https://github.com/yuyuanweb/mianshiya-plugin">https://github.com/yuyuanweb/mianshiya-plugin</a></p>
+
+        <h3>反馈与支持</h3>
+
+        <p>如有问题或建议，欢迎通过 GitHub issue 提交反馈，或者直接联系我们。</p>
     ]]></description>
 
     <extensions defaultExtensionNs="com.intellij">
